--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  go_router: ^12.1.1
 
 dev_dependencies:
   flutter_test:
