--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^12.1.1
   audioplayers: ^5.2.1
+  flutter_riverpod: ^2.4.8
 
 dev_dependencies:
   flutter_test:
